# game_of_life

./: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.linux  README.md  cmake_install.cmake  game_of_life
include/: array.h
src/: array.c  main.c
